--- a/infoLog.txt.1
+++ b/infoLog.txt.1
@@ -1,2 +1,4 @@
-May 04, 2020 5:42:24 PM logging.Logger log
+May 04, 2020 7:01:13 PM logging.Logger log
 INFO: Handling TEST
+May 04, 2020 7:01:51 PM logging.Logger log
+INFO: Start consuming results
