before refacrotrinf buckets. tests pass

--- a/infoLog.txt.1
+++ b/infoLog.txt.1
@@ -1,4 +1,20 @@
-May 04, 2020 7:01:13 PM logging.Logger log
+May 05, 2020 7:19:20 AM logging.Logger log
+INFO: Start
+May 05, 2020 7:19:24 AM logging.Logger log
+INFO: serving
+May 05, 2020 7:19:24 AM logging.Logger log
+INFO: Terminating 100 instances
+May 05, 2020 7:19:24 AM logging.Logger log
+INFO: Waiting for next task
+May 05, 2020 7:19:25 AM logging.Logger log
+INFO: Got message: -t new_task -b rotemb271-test-results1588652355328 -ki rotemb271TestTaskInputKey1588652355328 -ko rotemb271TestFinalOutputKey1588652360093
+May 05, 2020 7:19:25 AM logging.Logger log
+INFO: Handling Task$NewTask@6dd73d5d
+May 05, 2020 7:19:25 AM logging.Logger log
+INFO: Handling -t new_task -b rotemb271-test-results1588652355328 -ki rotemb271TestTaskInputKey1588652355328 -ko rotemb271TestFinalOutputKey1588652360093
+May 05, 2020 7:19:25 AM logging.Logger log
+INFO: Waiting for next task
+May 05, 2020 7:20:05 AM logging.Logger log
 INFO: Handling TEST
-May 04, 2020 7:01:51 PM logging.Logger log
+May 05, 2020 7:20:25 AM logging.Logger log
 INFO: Start consuming results
