tests pass. almost

--- a/infoLog.txt.1
+++ b/infoLog.txt.1
@@ -1,20 +1,28 @@
-May 05, 2020 8:14:06 AM logging.Logger log
+May 05, 2020 8:53:33 PM logging.Logger log
 INFO: Start
-May 05, 2020 8:14:10 AM logging.Logger log
+May 05, 2020 8:53:41 PM logging.Logger log
 INFO: serving
-May 05, 2020 8:14:10 AM logging.Logger log
-INFO: Terminating 100 instances
-May 05, 2020 8:14:10 AM logging.Logger log
-INFO: Waiting for next task
-May 05, 2020 8:14:11 AM logging.Logger log
-INFO: Got message: -t new_task -b rotemb271-test-operations-bucket1588655642001 -ki rotemb271TestTaskInputKey1588655642001 -ko rotemb271TestFinalOutputKey1588655646706
-May 05, 2020 8:14:11 AM logging.Logger log
-INFO: Handling Task$NewTask@35efc871
-May 05, 2020 8:14:11 AM logging.Logger log
-INFO: Handling -t new_task -b rotemb271-test-operations-bucket1588655642001 -ki rotemb271TestTaskInputKey1588655642001 -ko rotemb271TestFinalOutputKey1588655646706
-May 05, 2020 8:14:11 AM logging.Logger log
-INFO: Waiting for next task
-May 05, 2020 8:14:48 AM logging.Logger log
-INFO: Handling TEST
-May 05, 2020 8:15:12 AM logging.Logger log
+May 05, 2020 8:53:41 PM logging.Logger log
 INFO: Start consuming results
+May 05, 2020 8:53:41 PM logging.Logger log
+INFO: Terminating 100 instances
+May 05, 2020 8:53:41 PM logging.Logger log
+INFO: Waiting for next task
+May 05, 2020 8:53:41 PM logging.Logger log
+INFO: Got message: -t new_task -b rotemb271-test-tasks-bucket1588701209156 -ki rotemb271TestTaskInputKey1588701209159 -ko rotemb271TestFinalOutputKey1588701213861
+May 05, 2020 8:53:41 PM logging.Logger log
+INFO: Handling Task$NewTask@67b2d9d
+May 05, 2020 8:53:41 PM logging.Logger log
+INFO: Handling -t new_task -b rotemb271-test-tasks-bucket1588701209156 -ki rotemb271TestTaskInputKey1588701209159 -ko rotemb271TestFinalOutputKey1588701213861
+May 05, 2020 8:53:41 PM logging.Logger log
+INFO: Waiting for next task
+May 05, 2020 8:53:43 PM logging.Logger log
+INFO: Creating 1 instances
+May 05, 2020 8:54:28 PM logging.Logger log
+INFO: consuming a message
+May 05, 2020 8:55:25 PM logging.Logger log
+INFO: Handling TEST
+May 05, 2020 8:55:45 PM logging.Logger log
+INFO: Start consuming results
+May 05, 2020 8:55:45 PM logging.Logger log
+INFO: consuming a message
