--- a/infoLog.txt.2
+++ b/infoLog.txt.2
@@ -1,4 +1,6 @@
-May 05, 2020 8:14:48 AM logging.Logger log
+May 05, 2020 8:55:25 PM logging.Logger log
 INFO: Handling TEST
-May 05, 2020 8:15:12 AM logging.Logger log
+May 05, 2020 8:55:45 PM logging.Logger log
 INFO: Start consuming results
+May 05, 2020 8:55:45 PM logging.Logger log
+INFO: consuming a message
