--- a/infoLog.txt.3
+++ b/infoLog.txt.3
@@ -1,2 +1,4 @@
-May 05, 2020 8:15:12 AM logging.Logger log
+May 05, 2020 8:55:45 PM logging.Logger log
 INFO: Start consuming results
+May 05, 2020 8:55:45 PM logging.Logger log
+INFO: consuming a message
