--- a/infoLog.txt.1
+++ b/infoLog.txt.1
@@ -1,28 +1,24 @@
-May 05, 2020 8:53:33 PM logging.Logger log
-INFO: Start
-May 05, 2020 8:53:41 PM logging.Logger log
-INFO: serving
-May 05, 2020 8:53:41 PM logging.Logger log
-INFO: Start consuming results
-May 05, 2020 8:53:41 PM logging.Logger log
+May 06, 2020 9:03:10 AM logging.Logger log
 INFO: Terminating 100 instances
-May 05, 2020 8:53:41 PM logging.Logger log
-INFO: Waiting for next task
-May 05, 2020 8:53:41 PM logging.Logger log
-INFO: Got message: -t new_task -b rotemb271-test-tasks-bucket1588701209156 -ki rotemb271TestTaskInputKey1588701209159 -ko rotemb271TestFinalOutputKey1588701213861
-May 05, 2020 8:53:41 PM logging.Logger log
-INFO: Handling Task$NewTask@67b2d9d
-May 05, 2020 8:53:41 PM logging.Logger log
-INFO: Handling -t new_task -b rotemb271-test-tasks-bucket1588701209156 -ki rotemb271TestTaskInputKey1588701209159 -ko rotemb271TestFinalOutputKey1588701213861
-May 05, 2020 8:53:41 PM logging.Logger log
-INFO: Waiting for next task
-May 05, 2020 8:53:43 PM logging.Logger log
+May 06, 2020 9:03:11 AM logging.Logger log
 INFO: Creating 1 instances
-May 05, 2020 8:54:28 PM logging.Logger log
-INFO: consuming a message
-May 05, 2020 8:55:25 PM logging.Logger log
-INFO: Handling TEST
-May 05, 2020 8:55:45 PM logging.Logger log
+May 06, 2020 9:03:13 AM logging.Logger log
+INFO: Creating 1 instances
+May 06, 2020 9:03:15 AM logging.Logger log
+INFO: Terminating 2 instances
+May 06, 2020 9:03:16 AM logging.Logger log
+INFO: Terminating 1 instances
+May 06, 2020 9:03:17 AM logging.Logger log
+INFO: Creating 1 instances
+May 06, 2020 9:03:22 AM logging.Logger log
 INFO: Start consuming results
-May 05, 2020 8:55:45 PM logging.Logger log
+May 06, 2020 9:03:22 AM logging.Logger log
 INFO: consuming a message
+May 06, 2020 9:03:22 AM logging.Logger log
+INFO: The message is -a ToImage -i http://www.jewishfederations.org/local_includes/downloads/39497.pdf -s SUCCESS -t TRYINGTOAVOID -d NOT_TESTING -u https://rotemb271-test-output-bucket2.s3.amazonaws.com/jesusandseder.png -b rotemb271-test-tasks-bucket1588744998491 -k rotemb271FinalOutputKey1588744998494
+May 06, 2020 9:03:22 AM logging.Logger log
+INFO: Sealing consumption for rotemb271-test-tasks-bucket1588744998491, rotemb271FinalOutputKey1588744998494
+May 06, 2020 9:03:27 AM logging.Logger log
+INFO: Strored final results in https://rotemb271-test-tasks-bucket1588744998491.s3.amazonaws.com/rotemb271FinalOutputKey1588744998494
+May 06, 2020 9:05:29 AM logging.Logger log
+INFO: Handling TEST
