--- a/infoLog.txt.2
+++ b/infoLog.txt.2
@@ -1,6 +1,12 @@
-May 05, 2020 8:55:25 PM logging.Logger log
-INFO: Handling TEST
-May 05, 2020 8:55:45 PM logging.Logger log
+May 06, 2020 9:03:22 AM logging.Logger log
 INFO: Start consuming results
-May 05, 2020 8:55:45 PM logging.Logger log
+May 06, 2020 9:03:22 AM logging.Logger log
 INFO: consuming a message
+May 06, 2020 9:03:22 AM logging.Logger log
+INFO: The message is -a ToImage -i http://www.jewishfederations.org/local_includes/downloads/39497.pdf -s SUCCESS -t TRYINGTOAVOID -d NOT_TESTING -u https://rotemb271-test-output-bucket2.s3.amazonaws.com/jesusandseder.png -b rotemb271-test-tasks-bucket1588744998491 -k rotemb271FinalOutputKey1588744998494
+May 06, 2020 9:03:22 AM logging.Logger log
+INFO: Sealing consumption for rotemb271-test-tasks-bucket1588744998491, rotemb271FinalOutputKey1588744998494
+May 06, 2020 9:03:27 AM logging.Logger log
+INFO: Strored final results in https://rotemb271-test-tasks-bucket1588744998491.s3.amazonaws.com/rotemb271FinalOutputKey1588744998494
+May 06, 2020 9:05:29 AM logging.Logger log
+INFO: Handling TEST
