--- a/infoLog.txt.3
+++ b/infoLog.txt.3
@@ -1,4 +1,2 @@
-May 05, 2020 8:55:45 PM logging.Logger log
-INFO: Start consuming results
-May 05, 2020 8:55:45 PM logging.Logger log
-INFO: consuming a message
+May 06, 2020 9:05:29 AM logging.Logger log
+INFO: Handling TEST
